グラフスタイルの変更

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -39,7 +39,7 @@
           </div>
           <div class="profile-text">
             <%= form_with model:@user do |f| %>
-              <%= f.text_area :profile, class:"profile-area", placeholder:"事故" %>
+              <%= f.text_area :profile, class:"profile-area", placeholder:"自己紹介欄" %>
               <%= f.submit %>
             <% end %>
           </div>
