BMI機能の導入

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -31,8 +31,8 @@
               <span class="save-btn">Top</span>
             <% end %>
 
-            <%= link_to edit_user_path(@user) do %> 
-              <span class="save-btn">Edit</span>
+            <%= link_to user_path(@user) do %> 
+              <span class="save-btn">Back</span>
             <% end %>
 
             </div>
@@ -40,10 +40,10 @@
           <div class="profile-text">
             <%= form_with model:@user do |f| %>
               <%= f.text_area :profile, class:"profile-area", placeholder:"自己紹介欄" %>
-          </div>
               <%= f.number_field :height, class:"height-area"%>cm
               <%= f.submit %>
             <% end %>
+          </div>
         </div>    
         <div class="right-my-low">
           <div class="my-photo">
