--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -54,6 +54,7 @@
             <p>自己紹介</p>
             <% end %>
           </div>
+          身長：<%= @user.height %>cm
         </div>    
         <div class="right-my-low">
           <div class="my-photo">
