--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -40,8 +40,8 @@
           <div class="profile-text">
             <%= form_with model:@user do |f| %>
               <%= f.text_area :profile, class:"profile-area", placeholder:"自己紹介欄" %>
-              <%= f.number_field :height, class:"height-area"%>cm
-              <%= f.number_field :target_weight, class:"t-weight-area"%>kg
+              <%= f.number_field :height, placeholder:"現在の身長を入力", class:"height-area"%>cm
+              <%= f.number_field :target_weight, step: "0.1",  placeholder:"目標体重を入力", class:"t-weight-area"%>kg
               <%= f.submit %>
             <% end %>
           </div>
