--- a/app/views/weights/month.html.erb
+++ b/app/views/weights/month.html.erb
@@ -49,7 +49,11 @@
       </div>
 
       <div class="today-weight">
+        <% if @month_weight.present? %>
         ・30日前の週の平均体重は<%= @month_weight %> kg でした。
+        <% else %>
+        ・現在、30日前の週の記録データがありません。
+        <% end %>
       </div>
 
       <%# BMIなどの計算 %>
