目標体重を出力

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -17,7 +17,7 @@
     <ul>
       <div class="li-border">
       <%# プロフィール編集 %>
-      <%= link_to edit_user_path  do%>
+      <%= link_to user_path  do%>
         <li class="profile-btn">Profile</li>
       <% end %>
 
@@ -55,6 +55,7 @@
             <% end %>
           </div>
           身長：<%= @user.height %>cm
+          目標体重： <%= @user.target_weight %>
         </div>    
         <div class="right-my-low">
           <div class="my-photo">
