--- a/app/views/weights/index.html.erb
+++ b/app/views/weights/index.html.erb
@@ -62,15 +62,31 @@
         </div>
         <div>※1日で何回か記録することにより、1日の平均体重を記録出来ます。</div>
       </div>
-        <%# 今日の平均体重 %>
-        <div class="today-weight">
-          <%# 体重の記録があるか？ %>
-          <% if @today_weight.present? %>
-            本日の体重は<%= @today_weight.round(2) %> kg 
-            <% else %>
-            ← 本日の体重を記録することで、BMIの計算を行います。
+        
+      <%# 今日の平均体重 %>
+      <div class="today-weight">
+        <%# 体重の記録があるか？ %>
+        <% if @today_weight.present? %>
+          本日の体重は<%= @today_weight.round(2) %> kg 
+          <% else %>
+          本日の体重を記録することで、BMIの計算を行います。
+        <% end %>
+      </div>
+
+      <div class="target-weight">
+        <%# 目標体重との差を計算 %>
+        <% if @tt_weight.present? %>
+          <% if @tt_weight < 0 %>
+            <p>目標体重(<%= @user.target_weight %>kg)より、現在<%= @tt_weight %>kg 低い状況です。</p>
+          <% elsif @tt_weight == 0 %>
+            <p>目標体重(<%= @user.target_weight %>kg)との差はありません。</p>
+          <% else %>  
+            <p>目標体重(<%= @user.target_weight %>kg)より、現在<%= @tt_weight %>kg 高い状況です</p>
           <% end %>
-        </div>
+        <% else %>
+          <p>Profile画面で目標体重を登録した際に、本日の体重との差を計測できます。</p>
+        <% end %>
+      </div>
 
       <%# BMIなどの表示 %>
       <div class="weight-info">
