体重ページのスタイルの変更

--- a/app/assets/stylesheets/graph.css
+++ b/app/assets/stylesheets/graph.css
@@ -1,20 +1,1 @@
-.graph-all {
-  height: 100%;
-}
-
-.graph-all .graph-top {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-}
-
-.graph-all .graph-top .today-weight {
-  padding-top: 0.5%;
-}
-
-.graph-all .weight-graph {
-  height: 60%;
-}
-/*# sourceMappingURL=graph.css.map */
+/* No CSS *//*# sourceMappingURL=graph.css.map */
