--- a/app/assets/stylesheets/weights.scss
+++ b/app/assets/stylesheets/weights.scss
@@ -1,3 +1,53 @@
-// Place all the styles related to the weights controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.graph-all {
+  height: 100%;
+  // ーーグラフのスタイルーー
+  & .weight-graph {
+    padding-top: 3%;
+  }
+  & .graph-top {
+    display: flex;
+    justify-content: space-around;
+  }
+  & .weight-graph {
+    height: 60%;
+  }
+  & .weight-info {
+    padding-top: 3%;
+    & .info-header {
+      font-size: 1.3em;
+      border-bottom: 1px solid white;
+      text-shadow: 5px 2px rgba(255, 255, 255, 0.411);
+    }
+    & .today-weight {
+      padding-top: 1%;
+    }
+    & .target-weight {
+      padding-top: 0.5%;
+    }
+    & .user-info {
+      display: flex;
+      padding-top: 0.5%;
+    }
+    & .bmi-area2 {
+      padding-top: 0.5%;
+      & .jasso-url {
+        padding-top: 0.5%;
+        & p {
+          padding-top: 0.5%;
+        }
+        & a {
+          color: gray;
+          border-bottom: 1px solid gray;
+        }
+
+      }
+    }
+  }
+  & .season-graph {
+    padding-top: 4%;
+    & .graph-month {
+      color: white;
+      border-bottom: 1px solid white;
+    }
+  }
+}
