--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -19,7 +19,11 @@
           <li class="profile-btn">Profile</li>
         <% end %>
           <li class="calendar-btn">Calendar</li>
-          <li class="graph-btn">Graph</li>
+
+          <%# ーーーグラフ画面に遷移ーーー %>
+          <%= link_to weights_path do %>
+            <li class="graph-btn">Graph</li>
+          <% end %>
       </div>
     </ul>
     </div>
