--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -34,7 +34,7 @@
       <%# ーーー画面右上の表示ーーー %>
       <div class="right-my-hight">
         <div class="profile-header">
-          <h2 class="profile-title">Profile</h2>
+          <h2 class="profile-title">Edit Profile</h2>
           <%# ーーーtopと編集ページに遷移ーーー %>
           <div class="path-header">
             <%= link_to root_path do%>
