--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -96,7 +96,7 @@
               <%# ページネーション %>
               <%= paginate @tweets %>
             <% else %>
-              現在、投稿はありません。
+              <p class="not-tweet"> 現在、投稿はありません。</p>
             <% end %>
           </div>
         </div>
