--- a/app/assets/stylesheets/users/user.scss
+++ b/app/assets/stylesheets/users/user.scss
@@ -277,7 +277,7 @@ li {
           padding: 1%;
           & .profile-area {
             width: 99.4%;
-            height: 265px;
+            height: 240px;
             outline: none;
             background-color: rgba(255, 255, 255, 0.041);
             font-family: Georgia, 'Times New Roman', Times, serif;
@@ -297,10 +297,9 @@ li {
       & .my-photo {
 
         & .my-photo-title {
-          margin-left: 50px;
           padding-top: 17px;
-          font-size: larger;
-          padding-bottom: 3%;
+          font-size: 1.2em;
+          padding-bottom: 5%;
         }
         & .pad {
           padding: 30px 0;
@@ -309,6 +308,12 @@ li {
         & .pagination {
           text-align: center;
           margin-top: 3%;
+        }
+        & .not-tweet {
+          position: absolute;
+          top: 50%;
+          left: 25%;
+          font-size: 1.3em;
         }
       }
     }
