--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -21,7 +21,9 @@
             <li class="profile-btn">Profile edit</li>
           <% end %>
 
+          <%= link_to blogs_path do%>
             <li class="calendar-btn">Calendar</li>
+          <% end %>
 
           <%# ーーー体重ページに遷移ーーー %>
           <%= link_to weights_path do %>
