--- a/app/views/weights/index.html.erb
+++ b/app/views/weights/index.html.erb
@@ -24,7 +24,9 @@
             <li class="profile-btn">Profile</li>
           <% end %>
 
+          <%= link_to blogs_path do%>
             <li class="calendar-btn">Calendar</li>
+          <% end %>
           
           <%= link_to weights_path do %>
             <li class="graph-btn">Graph</li>
