カレンダーの一覧ページの作成

--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,41 +1,60 @@
-<p id="notice"><%= notice %></p>
-
-<h1>自分の日記</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>タイトル</th>
-      <th>時間</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% if @blogs %>
-      <% @blogs.each do |blog| %>
-        <tr>
-          <td><%= blog.title %></td>
-          <td><%= blog.start_time.strftime("%Y-%m-%d %H:%M") %></td>
-          <td><%= link_to 'Show', blog %></td>
-          <td><%= link_to 'Edit', edit_blog_path(blog.id) %></td>
-          <td><%= link_to 'Destroy',blog_path(blog.id), method: :delete, data: { confirm: 'Are you sure?' } %></td>
-        </tr>
-      <% end %>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to '日記をかく', new_blog_path %>
-
-<%= month_calendar events: @blogs do |date, blogs| %>
-  <%= date.day %>
-
-  <% blogs.each do |blog| %>
-    <div>
-      <%= link_to blog.title, blog %>
+<div class="mypage">
+  <div class="left-mypage">
+    <div class="left-my-hight">
+      <div class="my-profile-img">
+        <% if @user.avatar.attached? %>
+          <%= image_tag @user.avatar %>
+          <% else %>
+          <img src="/assets/IMG_9232.JPG">
+        <% end %>
+        
+      </div>
+      <%# ニックネームを表示 %>
+      <div class="nickname-border">
+        <p><%= @user.nickname %></p>
+      </div>
     </div>
-  <% end %>
-<% end %>
+
+    <%# メニュー欄 %>
+    <div class="left-my-low">
+      <ul>
+        <div class="li-border">
+          <%# プロフィール編集 %>
+          <%= link_to edit_user_path(@user)  do%>
+            <li class="profile-btn">Profile</li>
+          <% end %>
+
+          <%= link_to blogs_path do%>
+            <li class="calendar-btn">Calendar</li>
+          <% end %>
+          
+          <%= link_to weights_path do %>
+            <li class="graph-btn">Graph</li>
+          <% end %>
+        </div>
+      </ul>
+    </div>
+  </div>
+  
+  <%# ーーーCalendarページーーー %>
+  <div class="right-mypage">
+    <div class="calendar-all">
+      <p id="notice"><%= notice %></p>
+
+      <h1>My Calendar</h1>
+
+      <%= link_to 'Write a Diary', new_blog_path %>
+
+      <%= month_calendar events: @blogs do |date, blogs| %>
+        <%= date.day %>
+
+        <% blogs.each do |blog| %>
+          <div>
+            <%= link_to blog.title, blog %>
+          </div>
+        <% end %>
+      <% end %>
+    </div>
+  </div>
+</div>
+
